k8s/ingress/observability-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-app
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    # main hostname
    - host: observability-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-app
                port:
                  number: 8080
    # alias - both point to same service
    - host: podinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-app
                port:
                  number: 8080
